compilation_output.log
   Compiling gruesome v0.6.0 (/Users/cb/Projects/infocom-testing-old/infocom)
error[E0308]: mismatched types
    --> src/grue_compiler/codegen.rs:7467:67
     |
7467 |             self.reference_context.ir_id_to_address.insert(ir_id, object_address);
     |                                                     ------        ^^^^^^^^^^^^^^ expected `usize`, found `u16`
     |                                                     |
     |                                                     arguments to this method are incorrect
     |
help: the return type of this call is `u16` due to the type of the argument passed
    --> src/grue_compiler/codegen.rs:7467:13
     |
7467 |             self.reference_context.ir_id_to_address.insert(ir_id, object_address);
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^--------------^
     |                                                                   |
     |                                                                   this argument influences the return type of `insert`
note: method defined here
    --> /Users/cb/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/indexmap-2.11.0/src/map.rs:446:12
     |
446  |     pub fn insert(&mut self, key: K, value: V) -> Option<V> {
     |            ^^^^^^
help: you can convert a `u16` to a `usize`
     |
7467 |             self.reference_context.ir_id_to_address.insert(ir_id, object_address.into());
     |                                                                                 +++++++

For more information about this error, try `rustc --explain E0308`.
error: could not compile `gruesome` (lib) due to 1 previous error
